--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,18 @@ if (USE_OPENMP)
         set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     endif()
 endif()
+
+# Add MPI
+OPTION(USE_MPI "Use MPI" TRUE)
+if (USE_MPI)
+    find_package(MPI)
+    if (MPI_CXX_FOUND)
+        message(STATUS "FOUND MPI_CXX: ${MPI_INCLUDE_PATH}")
+        message(STATUS "FOUND MPI_CXX: ${MPI_CXX_LINK_FLAGS}")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${MPI_INCLUDE_PATH}")
+        #include_directories(${MPI_INCLUDE_PATH})
+    endif()
+endif()
 # END MRR
 include(psi4OptionsTools)
 option_with_flags(ENABLE_XHOST "Enables processor-specific optimization" ON
